# hyperliquid-node

./: .dockerignore  Dockerfile  README.md  compose.yaml  notes.md
.github/workflows/: build.yml
etc/: get_peers.sh
hl-bootstrap/: .gitignore  Cargo.toml  rust-toolchain.toml
hl-bootstrap/src/: hl_gossip_config.rs  hl_visor_config.rs  main.rs  prune.rs  speedtest.rs  sysctl.rs
hl-bootstrap/src/monitor/: mod.rs  server.rs
