[package]
name = "hl-bootstrap"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", default-features = false, features = [
    "tokio",
    "http1",
] }
clap = { version = "4.5.53", features = ["env", "derive"] }
duration-string = "0.5.3"
exec = "0.3.1"
eyre = "0.6.12"
prometheus = { version = "0.14.0", default-features = false }
reqwest = { version = "0.12.24", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
structstruck = "0.5.1"
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = [
    "macros",
    "net",
    "rt",
    "rt-multi-thread",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
which = { version = "8.0.0", features = ["tracing"] }

[dev-dependencies]
filetime = "0.2"
